maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:59: error: type mismatch;
 found   : Unit
 required: Boolean
  setDirection(dirActuelle)
              ^